# src/main/routes/budgets.routes.ts
@@ -4,8 +4,8 @@ import BudgetsController from '../../modules/budgets/controllers/budgets.control
 const router = Router();
 router.post('/create', BudgetsController.create);
 router.get('/list-all', BudgetsController.listAll);
-router.delete('/delete/:code', BudgetsController.delete);
-router.put('/update/:code', BudgetsController.update);
-router.get('/list-one/:code', BudgetsController.listOne);
+router.delete('/delete/:id', BudgetsController.delete);
+router.put('/update/:id', BudgetsController.update);
+router.get('/list-one/:id', BudgetsController.listOne);
 
 export default router;
