# src/shared/repositories/implements/budgets.types.ts
@@ -1,9 +1,19 @@
 export type TBudget = {
     id: number;
-    code: string;
+    budget_name: string;
+    created_by?: number;
+    budget_pdf: string;
+    created_at?: Date;
+    updated_at?: Date;
+    deleted?: boolean;
     }
 
 export type TBudgetUpdate = {
     id?: number;
-    code?: string;
+    budget_name?: string;
+    created_by?: number;
+    budget_pdf?: string;
+    created_at?: Date;
+    updated_at?: Date;
+    deleted?: boolean;
     };
